Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_erik12345.yml
+++ b/.github/workflows/main_erik12345.yml
@@ -28,7 +28,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r WebApp/requirements.txt
+        run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
@@ -60,4 +60,4 @@ jobs:
         with:
           app-name: 'erik12345'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_617A715F424E49A7B244E5E12DBA1008 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E20055F2AF824689B4ADE3089B5C9C1E }}
